<resources>
    <string name="app_name">Hosteler</string>
    <string name="Settings">Settings</string>
    <string name="Payment_Time">Payment Time</string>
    <string name="Payment_History">Payment History</string>
    <string name="From_last_payment">From last payment</string>
    <string name="BF">Breakfast</string>
    <string name="DN">Dinner</string>
    <string name="BOTH">Both</string>
    <string name="DONE">DONE</string>
    <string name="Additional_charge">Additional charge</string>
    <string name="Empty">Can\'t be empty</string>
    <string name="Description">Description</string>
    <string name="ADD">ADD</string>
    <string name="OTHER">OTHER</string>
    <string name="lazy_mode_desc">Breakfast and dinner will be added automatically (saturday no dinner ,monday no breakfast and sunday nothing)</string>
    <string name="Lazy_Mode">Lazy Mode</string>
    <string name="Breakfast_charge">Breakfast charge</string>
    <string name="Cost_for_one_breakfast">Cost for one breakfast</string>
    <string name="Cost_for_one_dinner">Cost for one dinner</string>
    <string name="Dinner_Charge">Dinner charge</string>
    <string name="Number_of_hostelers">Number of hostelers</string>
    <string name="Total_hostelers">Total hostelers</string>
    <string name="lazy_mode">lazy_mode</string>
    <string name="breakfast_charge">breakfast_charge</string>
    <string name="dinner_charge">dinner_charge</string>
    <string name="total_hostelers">total_hostelers</string>
    <string name="default_breakfast_cost">25</string>
    <string name="default_dinner_cost">50</string>
    <string name="default_total_hostelers">3</string>
    <string name="title_activity_payment_time">PaymentTimeActivity</string>
    <string name="Failed">Failed</string>
    <string name="You_cant_edit_paid_dates">You can\'t edit paid dates!</string>
    <string name="Pending_Amount">Pending Amount</string>
    <string name="Advance_Amount">Advance Amount</string>
    <string name="minus">-</string>
    <string name="Grand_Total">Grand Total</string>
    <string name="Bill">Bill</string>
    <string name="Payment">Payment</string>
    <string name="addition">+</string>
    <string name="Enter_amount_here">Enter amount here</string>
    <string name="PAY">PAY</string>
    <string name="New_pending_Amount">New pending amount</string>
    <string name="New_advance_Amount">New advance amount</string>
    <string name="Do_you_really_want_to_proceed_with_the_payment">Do you really want to proceed with the payment ?</string>
    <string name="Payment_cancelled">Payment cancelled</string>
    <string name="Amount_cant_be_zero">Amount can\'t be zero</string>
    <string name="title_activity_payment_histories">PaymentHistoriesActivity</string>
    <string name="Payment_date">Payment date</string>
    <string name="Amount">Amount</string>
    <string name="Payment_Histories">Payment Histories</string>
    <string name="Breakfast_added">Breakfast added</string>
    <string name="Dinner_added">Dinner added</string>
    <string name="Lazy_mode_activated">Lazy mode activated</string>
    <string name="Lazy_mode_deactivated">Lazy mode deactivated</string>
    <string name="Delete">Delete</string>
    <string name="Do_you_reall_want_to_delete_this_payment">Do you really want to delete this payment?</string>
    <string name="YES">YES</string>
    <string name="CANCEL">CANCEL</string>
    <string name="No_history_found">No history found</string>
    <string name="Amount_updated">Amount updated!</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="Filter_By">Filter by</string>
</resources>
